public/stylus/_typography.styl
body {
    font-family: $open-stack;
    font-size: 13px;
    font-weight: 400;
    line-height: 22px;
}

h1,h2,h3,h4,h5,h6 {
    font-weight: 400;
    margin: .75em 0 .75em;
}

h1 {
    font-size: 18px;
    line-height: 26px;
}

h2 {
    font-size: 16px;
    line-height: 24px;
}

h3 {
    font-size: 15px;
    line-height: 23px;
}

h4 {
    font-size: 14px;
    line-height: 22px;
}

a:link,
a:visited,
a:hover,
a:active,
a:focus {
    color: $light-blue;
    font-size: 13px;
    line-height: 18px;
    text-decoration: none;
}

